adding test for kong exit transformer